[gd_scene load_steps=7 format=3 uid="uid://crrkryowd5yo4"]

[ext_resource type="Script" path="res://scripts/avatar_selector.gd" id="1_cerhn"]
[ext_resource type="Theme" uid="uid://dxqfvgk3f6y5b" path="res://scenes/screens/Theme.tres" id="2_xagrr"]
[ext_resource type="Texture2D" uid="uid://dr0eds7o3u6jk" path="res://images/icons/arrow left.png" id="3_ooxca"]
[ext_resource type="SpriteFrames" uid="uid://u4i0jn2pcmvw" path="res://sprite frames/blue idle.tres" id="4_7v5vh"]
[ext_resource type="FontFile" uid="uid://bmsriflmactn6" path="res://art/Pixel Game.otf" id="4_lim7v"]
[ext_resource type="Texture2D" uid="uid://o74yrnk02xmv" path="res://images/icons/arrow-right.png" id="5_vtpjq"]

[node name="AvatarSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cerhn")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="PrevBtn" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_xagrr")
icon = ExtResource("3_ooxca")

[node name="Panel" type="Panel" parent="VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(180, 200)
layout_mode = 2
theme = ExtResource("2_xagrr")

[node name="AvatarTexture" type="AnimatedSprite2D" parent="VBoxContainer2/HBoxContainer/Panel"]
position = Vector2(91.25, 98.75)
scale = Vector2(1.86842, 2.56329)
sprite_frames = ExtResource("4_7v5vh")
animation = &"idle"

[node name="NextBtn" type="Button" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_xagrr")
icon = ExtResource("5_vtpjq")
icon_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerName" type="TextEdit" parent="VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_xagrr")
theme_override_font_sizes/font_size = 15
placeholder_text = "Enter Player Name"
scroll_fit_content_height = true

[node name="InputMethod" type="OptionButton" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xagrr")
theme_override_font_sizes/font_size = 15

[node name="SelectBtn" type="Button" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_xagrr")
theme_override_fonts/font = ExtResource("4_lim7v")
theme_override_font_sizes/font_size = 25
text = "Select"

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/PrevBtn" to="." method="_on_prev_btn_pressed"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/NextBtn" to="." method="_on_next_btn_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/SelectBtn" to="." method="_on_select_btn_pressed"]
